--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -1,6 +1,8 @@
 {% set version = "0.27.2" %}
 {% set md5 = "df74e4ccd7e847965ce53dc0e18cb420" %}
 
+# https://github.com/conda/conda-build/issues/2717
+
 package:
   name: eelbrain
   version: {{ version }}
@@ -22,7 +24,7 @@ requirements:
     - olefile  # [win or linux]
     - pywin32-ctypes  # [win]
     - setuptools >=17
-    - numpy  {{ numpy }}
+    - numpy 1.11.*
 
   run:
     - python  {{ python }}
@@ -34,7 +36,7 @@ requirements:
     - mne >=0.15.2
     - nibabel >=2.0
     - olefile  # [linux]
-    - numpy
+    - {{ pin_compatible('numpy') }}
     - pillow
     - pysurfer >=0.8
     - scipy >=0.17
