--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -42,7 +42,7 @@ requirements:
     - scipy >=0.17
     - tex >=1.8
     - tqdm >=4.8
-    - wxpython
+    - wxpython 3
 
 test:
   # Python imports
