--- a/env-dev3-win.yml
+++ b/env-dev3-win.yml
@@ -15,8 +15,8 @@ dependencies:
 - numpy
 - scipy >= 0.17, !=1.0.0  # 1.0 has bug: UnboundLocalError: local variable 'iprint' referenced before assignment
 - matplotlib
-- pyqt>=5.9
-- vtk>=8
+- pyqt #>=5.9
+- vtk #>=8
 - pandas
 - scikit-learn
 - h5py
@@ -32,6 +32,7 @@ dependencies:
 - numpydoc
 - flake8
 - spyder
+- mayavi
 # Eelbrain additions
 - ipdb
 - ipython
@@ -61,10 +62,6 @@ dependencies:
 - r-car
 # - r-ez  # requires ncil channel
 - pip:
-  - "git+https://github.com/enthought/traits.git@a99b3f64d50c5f7f28ffc01bf69419b061f9e976"
-  - "git+https://github.com/enthought/pyface.git@6a0cac149d56293482bb828a7d98122667c773be"
-  - "git+https://github.com/enthought/traitsui.git@e366ad3886d3c39bedb96e83bab447d31c4ab725"
-  - "git+https://github.com/enthought/mayavi.git"
   - "git+https://github.com/nipy/PySurfer.git"
   - mne
   - nitime
