--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -33,7 +33,7 @@ requirements:
     - ipython
     - keyring >=5
     - matplotlib >=2.1
-    - mne >=0.15.2, <0.16
+    - mne >=0.15.2
     - nibabel >=2.0
     - olefile  # [linux]
     - {{ pin_compatible('numpy') }}
