--- a/env-dev-win.yml
+++ b/env-dev-win.yml
@@ -1,7 +1,6 @@
 # usage: $ conda env create --file=env-dev3.yml
 # to run stats test, install r-ez with $ conda install -c ncil r-ez --no-deps
-# need traitsui and pyface >5.1 for WXPython 4
-name: eeldev3
+name: eeldev
 channels:
 - defaults
 - conda-forge
@@ -9,29 +8,21 @@ channels:
 # - ncil  # for r-ez
 dependencies:
 # mne-python
-- python>=3.6
+- python >= 3.6
 - pip
 - mkl
 - numpy
 - scipy >= 0.17, !=1.0.0  # 1.0 has bug: UnboundLocalError: local variable 'iprint' referenced before assignment
 - matplotlib
-- pyqt>=5.9
-- vtk>=8
+- pyqt #>=5.9
+- vtk #>=8
 - pandas
 - scikit-learn
 - h5py
 - pillow
 - statsmodels
-- jupyter
-- nose
-- pytest
-- pytest-cov
-- sphinx
 - joblib
 - psutil
-- numpydoc
-- flake8
-- spyder
 # Eelbrain additions
 - ipdb
 - ipython
@@ -53,16 +44,17 @@ dependencies:
 - flake8
 - nose
 - pytest
-- coverage
+- pytest-cov
 # testing of R integration
 - rpy2
 - r-car
 # - r-ez  # requires ncil channel
+# mayavi
+- traits >= 4.6.0
+- pyface >= 6  # need traitsui and pyface >5.1 for WXPython 4
+- traitsui >= 6
+- mayavi
 - pip:
-  - "git+https://github.com/enthought/traits.git@a99b3f64d50c5f7f28ffc01bf69419b061f9e976"
-  - "git+https://github.com/enthought/pyface.git@6a0cac149d56293482bb828a7d98122667c773be"
-  - "git+https://github.com/enthought/traitsui.git@e366ad3886d3c39bedb96e83bab447d31c4ab725"
-  - "git+https://github.com/enthought/mayavi.git"
   - "git+https://github.com/nipy/PySurfer.git"
   - mne
   - nitime
