--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -14,6 +14,8 @@ numpy >= 1.8
 scipy >= 0.17
 nibabel >= 2.0
 matplotlib >= 2.1
+mayavi == 4.5
+vtk == 6.3
 pysurfer >= 0.7
 mne >= 0.15
 
@@ -33,4 +35,4 @@ coverage
 # testing of R integration
 rpy2
 r-car
-r-ez  # might require additional channel, e.g. ``mittner``
+# r-ez  # might require additional channel, e.g. ``mittner``
