--- a/env-dev-win.yml
+++ b/env-dev-win.yml
@@ -7,29 +7,31 @@ channels:
 - christianbrodbeck
 # - ncil  # for r-ez
 dependencies:
-# mne-python
 - python >= 3.6
 - pip
-- mkl
 - numpy
 - scipy >= 0.17, !=1.0.0  # 1.0 has bug: UnboundLocalError: local variable 'iprint' referenced before assignment
 - matplotlib
-- pyqt #>=5.9
-- vtk #>=8
+- pyarrow
+- pillow
+- psutil
+# mne-python
+- mne
+- pysurfer
+- mkl
+- pyqt
+- vtk
+- h5py
 - pandas
 - scikit-learn
-- h5py
-- pillow
 - statsmodels
 - joblib
-- psutil
 # Eelbrain additions
 - ipdb
 - ipython
 - colormath >= 2.1
 - tqdm >= 4.19
 - keyring >= 5
-- pyarrow
 - wxpython >=4
 - nibabel >= 2.0
 #- pysurfer >= 0.7
@@ -55,12 +57,8 @@ dependencies:
 - traitsui >= 6
 - mayavi
 - pip:
-  - "git+https://github.com/nipy/PySurfer.git"
-  - mne
   - nitime
   - nilearn
   - neo
   - pytest-sugar
   - pytest-faulthandler
-  - sphinx_bootstrap_theme
-  - git+https://github.com/sphinx-gallery/sphinx-gallery.git
