--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -1,5 +1,5 @@
 {% set version = "0.VERSION" %}
-{% set md5 = "5678c7f90282992de8ec5bd2ca2756cd" %}
+{% set sha256 = "b6a3e9569708eae495aa0249f718dc2d7db59cd9295f9da7a1c22d0c765d5ee3" %}
 
 # https://github.com/conda/conda-build/issues/2717
 
@@ -10,7 +10,7 @@ package:
 source:
   fn: eelbrain-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/e/eelbrain/eelbrain-{{ version }}.tar.gz
-  md5: {{ md5 }}
+  sha256: {{ sha256 }}
 
 build:
   number: 0
@@ -40,9 +40,8 @@ requirements:
     - pillow
     - pysurfer >=0.8
     - scipy >=0.17
-    - tex >=1.8
     - tqdm >=4.8
-    - wxpython
+    - wxpython >=4
 
 test:
   # Python imports
