--- a/env-dev.yml
+++ b/env-dev.yml
@@ -1,5 +1,5 @@
 # Environment for macOS and Linux
-# usage: $ conda env create --file=env-dev3.yml
+# usage: $ conda env create --file=env-dev.yml
 # to run stats test, install r-ez with $ conda install -c ncil r-ez --no-deps
 name: eeldev
 channels:
@@ -8,32 +8,31 @@ channels:
 - christianbrodbeck
 # - ncil  # for r-ez
 dependencies:
-# mne-python
 - python >= 3.6
 - pip
-- mkl
 - numpy
 - scipy >= 0.17, !=1.0.0  # 1.0 has bug: UnboundLocalError: local variable 'iprint' referenced before assignment
 - matplotlib
-- pyqt >= 5.9
-- vtk >= 8
+- pyarrow
+- pillow
+- psutil
+# mne-python
+#- mne
+- mkl
+- pyqt
+- vtk
+- h5py
 - pandas
 - scikit-learn
-- h5py
-- pillow
 - statsmodels
 - joblib
-- psutil
 # Eelbrain additions
 - ipdb
 - ipython
 - colormath >= 2.1
 - tqdm >= 4.19
 - keyring >= 5
-- pyarrow
 - wxpython >=4
-- nibabel >= 2.0
-#- pysurfer >= 0.7
 # building
 - setuptools >= 17
 - cython
@@ -50,16 +49,16 @@ dependencies:
 - rpy2
 - r-car
 # - r-ez  # requires ncil channel
-# mayavi
-- traits >= 4.6.0
-- pyface >= 6  # need traitsui and pyface >5.1 for WXPython 4
-- traitsui >= 6
+# plotting brains
+- nibabel >= 2.0, !=2.3.0  # read_annot bug
+#- mayavi >= 4.6
+#- pysurfer >= 0.7
 - pip:
-  - mayavi
-  - "git+https://github.com/nipy/PySurfer.git"
-  - mne
   - nitime
   - nilearn
   - neo
-#  - pytest-sugar  # errors on macOS
+#  - pytest-sugar  # errors on Linux
   - pytest-faulthandler
+  - mne
+  - mayavi
+  - pysurfer
