--- a/env-dev-win.yml
+++ b/env-dev-win.yml
@@ -1,4 +1,5 @@
-# usage: $ conda env create --file=env-dev3.yml
+# Environment for Windows
+# usage: $ conda env create --file=env-dev-win.yml
 # to run stats test, install r-ez with $ conda install -c ncil r-ez --no-deps
 name: eeldev
 channels:
@@ -17,7 +18,6 @@ dependencies:
 - psutil
 # mne-python
 - mne
-- pysurfer
 - mkl
 - pyqt
 - vtk
@@ -33,8 +33,6 @@ dependencies:
 - tqdm >= 4.19
 - keyring >= 5
 - wxpython >=4
-- nibabel >= 2.0
-#- pysurfer >= 0.7
 # building
 - setuptools >= 17
 - cython
@@ -51,11 +49,10 @@ dependencies:
 - rpy2
 - r-car
 # - r-ez  # requires ncil channel
-# mayavi
-- traits >= 4.6.0
-- pyface >= 6  # need traitsui and pyface >5.1 for WXPython 4
-- traitsui >= 6
-- mayavi
+# plotting brains
+- nibabel >= 2.0, !=2.3.0  # read_annot bug
+- mayavi >= 4.6
+- pysurfer >= 0.7
 - pip:
   - nitime
   - nilearn
