--- a/readthedocs_env.yml
+++ b/readthedocs_env.yml
@@ -17,7 +17,7 @@ dependencies:
   - scipy >= 0.17
   - nibabel >= 2.0, <2.3
   - matplotlib >= 2.1
-  - wxpython >= 3.0
+  - wxpython == 3.0
   - pip:
     - mne  # to avoid adding mayavi through PySurfer (when mayavi is imported
            # in readthedocs it blocks the build)
