--- a/env-dev.yml
+++ b/env-dev.yml
@@ -17,10 +17,10 @@ dependencies:
 - pillow
 - psutil
 # mne-python
-#- mne
+- mne
 - mkl
 - pyqt
-- vtk
+- vtk >= 8.1.1
 - h5py
 - pandas
 - scikit-learn
@@ -45,20 +45,14 @@ dependencies:
 - nose
 - pytest
 - pytest-cov
+- pytest-faulthandler
+#- pytest-sugar  # errors on Linux
 # testing of R integration
 - rpy2
 - r-car
 # - r-ez  # requires ncil channel
 # plotting brains
 - nibabel >= 2.0, != 2.3.0  # read_annot bug
-#- mayavi >= 4.6
-#- pysurfer >= 0.7
-- pip:
-  - nitime
-  - nilearn
-  - neo
-#  - pytest-sugar  # errors on Linux
-  - pytest-faulthandler
-  - mne
-  - mayavi
-  - pysurfer
+- mayavi >= 4.6
+- pysurfer >= 0.7
+- nilearn
