--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
 
 script:
   - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then
-      make test;
+      make testw;
     else
       make test;
     fi;
