TEST:  pytest.ini -> setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,11 @@ all_files  = 1
 [upload_docs]
 upload-dir = doc/build/html
 
+[tool:pytest]
+filterwarnings =
+    ignore::FutureWarning
+    ignore::DeprecationWarning
+
 [flake8]
 exclude = __init__.py, eelbrain/_wxutils/icons.py, eelbrain/table.py, eelbrain/test.py, eelbrain/testnd.py
 ignore = F403,F999
