--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ upload-dir = doc/build/html
 filterwarnings =
     ignore::FutureWarning
     ignore::DeprecationWarning
+    ignore:can't resolve package from __spec__ or __package__:ImportWarning
 
 [flake8]
 exclude = __init__.py, eelbrain/_wxutils/icons.py, eelbrain/table.py, eelbrain/test.py, eelbrain/testnd.py
