--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -38,13 +38,12 @@ requirements:
     - olefile  # [linux]
     - {{ pin_compatible('numpy') }}
     - pillow
-    - mayavi 4.5
-    - vtk 6.3
+    - mayavi >=4.5
     - pysurfer >=0.8
     - scipy >=0.17
     - tex >=1.8
     - tqdm >=4.8
-    - wxpython 3
+    - wxpython ==3
 
 test:
   # Python imports
