--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - colormath >=2.1
     - ipython
     - keyring >=5
-    - matplotlib >=2.1
+    - matplotlib >=2.1, <3.0  # pyplot/wx conflict
     - mne >=0.16
     - nibabel >=2.0, !=2.3.0
     - olefile  # [linux]
