--- a/env-dev-win.yml
+++ b/env-dev-win.yml
@@ -3,8 +3,8 @@
 # to run stats test, install r-ez with $ conda install -c ncil r-ez --no-deps
 name: eeldev
 channels:
-- defaults
 - conda-forge
+- defaults
 - christianbrodbeck
 # - ncil  # for r-ez
 dependencies:
@@ -12,7 +12,7 @@ dependencies:
 - pip
 - numpy
 - scipy >= 0.17, != 1.0.0  # 1.0 has bug: UnboundLocalError: local variable 'iprint' referenced before assignment
-- matplotlib
+- matplotlib >= 2.1, < 3.0  # pyplot/wx conflict
 - pyarrow
 - pillow
 - psutil
@@ -53,6 +53,7 @@ dependencies:
 # - r-ez  # requires ncil channel
 # plotting brains
 - nibabel >= 2.0, != 2.3.0  # read_annot bug
-- mayavi >= 4.6
-- pysurfer >= 0.7
+- mayavi >= 4.6.2  # conda-forge pinning faulty
+- vtk >= 8.1.1
+- pysurfer >= 0.9
 - nilearn
