--- a/env-dev.yml
+++ b/env-dev.yml
@@ -12,12 +12,12 @@ dependencies:
 - pip
 - numpy
 - scipy >= 0.17, != 1.0.0  # 1.0 has bug: UnboundLocalError: local variable 'iprint' referenced before assignment
-- matplotlib
+- matplotlib >= 2.1, < 3.0  # pyplot/wx conflict
 - pyarrow
 - pillow
 - psutil
 # mne-python
-#- mne >= 0.16
+- mne >= 0.16
 - mkl
 - pyqt
 #- vtk >= 8.1.1
@@ -53,10 +53,7 @@ dependencies:
 # - r-ez  # requires ncil channel
 # plotting brains
 - nibabel >= 2.0, != 2.3.0  # read_annot bug
-#- mayavi >= 4.6
-#- pysurfer >= 0.7
+- mayavi >= 4.6.2  # conda-forge pinning faulty
+- vtk >= 8.1.1
+- pysurfer >= 0.9
 - nilearn
-- pip:
-  - mayavi >= 4.6
-  - pysurfer >= 0.7
-  - mne >= 0.16
