--- a/readthedocs_env.yml
+++ b/readthedocs_env.yml
@@ -15,7 +15,7 @@ dependencies:
   - sphinx >= 1.6
   - scipy >= 0.17
   - nibabel >= 2.0, != 2.3.0  # read_annot bug
-  - matplotlib >= 2.1
+  - matplotlib < 3.0
   - nilearn
   - wxpython >= 4.0
   - pip:
