--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,5 +1,7 @@
-conda:
-    file: readthedocs_env.yml
+# https://docs.readthedocs.io/en/latest/yaml-config.html
+build:
+    image: latest
 python:
-   version: 3
-   setup_py_install: true
+   version: 3.6
+   pip_install: true
+requirements_file: readthedocs_requirements.txt
