--- a/env-dev.yml
+++ b/env-dev.yml
@@ -11,6 +11,7 @@ dependencies:
 - python >= 3.6
 - pip
 - numpy
+- openblas >=0.2.20
 - scipy >= 0.17, != 1.0.0  # 1.0 has bug: UnboundLocalError: local variable 'iprint' referenced before assignment
 - matplotlib
 - pyarrow
