--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - pywin32-ctypes  # [win]
     - setuptools >=17
     - numpy 1.11.*
+    - openblas 0.2.20  # [osx]
 
   run:
     - python  {{ python }}
@@ -37,6 +38,7 @@ requirements:
     - nibabel >=2.0, !=2.3.0
     - olefile  # [linux]
     - {{ pin_compatible('numpy') }}
+    - openblas 0.2.20  # [osx]
     - pillow
     - pysurfer >=0.8
     - nilearn
