--- a/env-dev.yml
+++ b/env-dev.yml
@@ -11,7 +11,7 @@ dependencies:
 - numpy
 - openblas >=0.2.20
 - scipy >= 0.17, != 1.0.0  # 1.0 has bug: UnboundLocalError: local variable 'iprint' referenced before assignment
-- matplotlib >= 2.1, < 3.0  # pyplot/wx conflict
+- matplotlib >= 2.1
 - pyarrow
 - pillow
 - psutil
