--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "0.VERSION" %}
-{% set sha256 = "b6a3e9569708eae495aa0249f718dc2d7db59cd9295f9da7a1c22d0c765d5ee3" %}
+{% set version = "0.29a0" %}
+{% set sha256 = "ed9454de34c72c3008525bc313bd5a358379f8097a9934437ae081b25ac1d91b" %}
 
 # https://github.com/conda/conda-build/issues/2717
 
