--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "0.VERSION" %}
-{% set sha256 = "b6a3e9569708eae495aa0249f718dc2d7db59cd9295f9da7a1c22d0c765d5ee3" %}
+{% set version = "0.30a0" %}
+{% set sha256 = "147e5018a0693c2e3ee3ce0a2844352647b6037022f5684c62b68499b0b39f0b" %}
 
 # https://github.com/conda/conda-build/issues/2717
 
