--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "0.29b1" %}
-{% set sha256 = "337fef14c11296078c8828974035cf3902855d93ecec7e2e064a69032ad8ba88" %}
+{% set version = "0.29.0" %}
+{% set sha256 = "1c1c23be217285e83bd8b4fcc466f341d749eb23317d10d78e821bd74d30dc06" %}
 
 # https://github.com/conda/conda-build/issues/2717
 
