--- a/conda/eelbrain/meta.yaml
+++ b/conda/eelbrain/meta.yaml
@@ -26,7 +26,8 @@ requirements:
     - pywin32-ctypes  # [win]
     - setuptools >=17
     - numpy 1.11.*
-    - openblas >=0.2.20  # [osx]
+    - libblas
+    - libcblas
 
   run:
     - python  {{ python }}
@@ -39,7 +40,8 @@ requirements:
     - nibabel >=2.0, !=2.3.0
     - olefile  # [linux]
     - {{ pin_compatible('numpy') }}
-    - openblas >=0.2.20  # [osx]
+    - libblas
+    - libcblas
     - pillow
     - pysurfer >=0.8
     - nilearn
