--- a/env-dev.yml
+++ b/env-dev.yml
@@ -9,8 +9,9 @@ dependencies:
 - python >= 3.6
 - pip
 - twine
+- libblas
+- libcblas
 - numpy
-- openblas >=0.2.20
 - scipy >= 0.17, != 1.0.0  # 1.0 has bug: UnboundLocalError: local variable 'iprint' referenced before assignment
 - matplotlib >= 2.1
 - pyarrow
