--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ matrix:
       sudo: false
       env: CONDA_OS="Linux"
       addons: {apt: {packages: [libwebkitgtk-dev]}}
+    - os: linux
+      python: 3.7
+      sudo: false
+      env: CONDA_OS="Linux"
+      addons: {apt: {packages: [libwebkitgtk-dev]}}
 
 # Setup anaconda
 # https://gist.github.com/dan-blanchard/7045057
