--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
     - os: osx  # https://github.com/travis-ci/travis-ci/issues/2312
       python: 3.6
       sudo: false
-      env: CONDA_OS="MacOSX" KMP_DUPLICATE_LIB_OK=TRUE
+      env: CONDA_OS="MacOSX" KMP_DUPLICATE_LIB_OK=TRUE CC=g++ CXX=g++
     - os: linux
       python: 3.6
       sudo: false
