--- a/setup.cfg
+++ b/setup.cfg
@@ -21,5 +21,5 @@ max-line-length = 100
 
 [pydocstyle]
 convention = pep257
-match_dir = (?!tests|mne_fixes)[^\.].*
+match_dir = (?!tests|mne_fixes|_external)[^\.].*
 add-ignore = D100,D101,D102,D103,D104,D105,D107,D204,D300,D400,D401,D402,D403,D413
