--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: c
 env:
-    global: PYTHON_VERSION=3.6
-            DISPLAY=:99.0
-            TRAVIS_PYTHON_VERSION=3.6
+    global: DISPLAY=:99.0
 
 matrix:
   include:
     - os: osx  # https://github.com/travis-ci/travis-ci/issues/2312
-      python: 3.6
+      python: 3.7
       sudo: false
       env: CONDA_OS="MacOSX" KMP_DUPLICATE_LIB_OK=TRUE CC=g++ CXX=g++
     - os: linux
@@ -17,6 +15,11 @@ matrix:
       addons: {apt: {packages: [libwebkitgtk-dev]}}
     - os: linux
       python: 3.7
+      sudo: false
+      env: CONDA_OS="Linux"
+      addons: {apt: {packages: [libwebkitgtk-dev]}}
+    - os: linux
+      python: 3.8
       sudo: false
       env: CONDA_OS="Linux"
       addons: {apt: {packages: [libwebkitgtk-dev]}}
