list tstart, tend. TODO .pyx

--- a/env-dev.yml
+++ b/env-dev.yml
@@ -1,7 +1,7 @@
 # Environment for development
 # usage: $ conda env create --file=env-dev.yml
 # to run stats test, install r-ez with $ conda install -c ncil r-ez --no-deps
-name: eeldev
+name: eelfork
 channels:
 - defaults
 - conda-forge
