--- a/env-dev.yml
+++ b/env-dev.yml
@@ -14,7 +14,7 @@ dependencies:
 - libcblas
 - numpy
 - scipy >= 1.3
-- matplotlib >= 3
+- matplotlib-base >= 3
 - pyarrow
 - pillow
 - psutil
@@ -54,7 +54,7 @@ dependencies:
 - r-car
 # - r-ez  # requires ncil channel
 # plotting brains
-- nibabel >= 2.0, != 2.3.0  # read_annot bug
+- nibabel >= 2.5
 - mayavi >= 4.6.2  # conda-forge pinning faulty
 - vtk >= 8.1.1
 - pysurfer >= 0.9
