--- a/env-dev.yml
+++ b/env-dev.yml
@@ -40,6 +40,7 @@ dependencies:
 - sphinx
 - sphinx-autodoc-typehints
 - sphinx-gallery
+- sphinx_rtd_theme
 - sphinxcontrib-bibtex
 - pydocstyle
 # testing
