--- a/env-dev.yml
+++ b/env-dev.yml
@@ -13,7 +13,7 @@ dependencies:
 - libclang
 - numpy
 - scipy >= 1.3
-- matplotlib-base >= 3, <3.1  # https://github.com/matplotlib/matplotlib/issues/15410
+- matplotlib-base >= 3.2.2  # https://github.com/matplotlib/matplotlib/issues/15410
 - pyarrow
 - pillow
 - psutil
@@ -35,7 +35,7 @@ dependencies:
 - setuptools >= 17
 - cython
 # docs
-- sphinx
+- sphinx >= 3
 - sphinx-autodoc-typehints
 - sphinx-gallery
 - sphinx_rtd_theme
@@ -54,7 +54,6 @@ dependencies:
 # plotting brains
 - nibabel >= 2.5
 - mayavi >= 4.6.2  # conda-forge pinning faulty
-- traits < 6  # traitsui incompatible (travis error)
 - vtk >= 8.1.1
 - pysurfer >= 0.9
 - nilearn
