--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
 
 # Setup anaconda
 # https://gist.github.com/dan-blanchard/7045057
+# Without the defaults channel, the environment takes hours to solve; but with defaults, the mne interpolation test fails, suggesting problem in a library
 before_install:
   - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
       /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset;
@@ -29,6 +30,11 @@ before_install:
   - chmod +x miniconda.sh
   - ./miniconda.sh -b -p $HOME/miniconda
   - export PATH=$HOME/miniconda/bin:$PATH
+  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
+      sed -e $'s/- conda-forge/- defaults\\\n- conda-forge/g' -i env-dev.yml;
+    else
+      sed -e $'s/- conda-forge/- defaults\\\n- conda-forge/g' -i .bkp env-dev.yml;
+    fi
   - conda env create -n condaenv --file env-dev.yml
   - . $HOME/miniconda/etc/profile.d/conda.sh
   - conda activate condaenv
