--- a/env-dev.yml
+++ b/env-dev.yml
@@ -13,7 +13,7 @@ dependencies:
 - libclang
 - numpy
 - scipy >= 1.3
-- matplotlib-base >= 3.2.2  # https://github.com/matplotlib/matplotlib/issues/15410
+- matplotlib-base >= 3, <3.1  # https://github.com/matplotlib/matplotlib/issues/15410
 - pyarrow
 - pillow
 - psutil
