--- a/env-dev.yml
+++ b/env-dev.yml
@@ -13,6 +13,7 @@ dependencies:
 - libclang
 - numpy
 - scipy >= 1.3
+- numba
 - matplotlib-base >= 3, <3.1  # https://github.com/matplotlib/matplotlib/issues/15410
 - pyarrow
 - pillow
