--- a/env-dev.yml
+++ b/env-dev.yml
@@ -11,7 +11,7 @@ dependencies:
 - libblas=*=*mkl  # openblas produces incorrect results for ICA in iMac Pro
 - libcblas
 - libclang
-- numpy
+- numpy >= 1.20
 - scipy >= 1.3
 - numba
 - matplotlib-base >= 3.3.4  # https://github.com/matplotlib/matplotlib/issues/15410
