CI travis:  - Use conda-forge, not defaults  - Follow conda instructions for setup  - Only test with MNE data once

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,48 +1,55 @@
-language: c
+language: c  # Python will come from conda
 env:
     global: DISPLAY=:99.0
 
-matrix:
+# DOCs: https://docs.travis-ci.com/user/build-matrix/
+jobs:
   include:
     - os: osx  # https://github.com/travis-ci/travis-ci/issues/2312
-      python: 3.8
-      sudo: false
-      env: CONDA_OS="MacOSX" KMP_DUPLICATE_LIB_OK=TRUE CC=g++ CXX=g++
+      name: "MacOS Python 3.8"
+      env: CONDA_PYTHON="3.8" CONDA_OS="MacOSX" KMP_DUPLICATE_LIB_OK=TRUE CC=g++ CXX=g++
+    - os: osx  # https://github.com/travis-ci/travis-ci/issues/2312
+      name: "MacOS Python 3.9"
+      env: CONDA_PYTHON="3.9" CONDA_OS="MacOSX" KMP_DUPLICATE_LIB_OK=TRUE CC=g++ CXX=g++
     - os: linux
-      python: 3.8
-      sudo: false
-      env: CONDA_OS="Linux"
+      name: "Linux Python 3.8 + MNE data tests"
+      env: CONDA_PYTHON="3.8" CONDA_OS="Linux" DOWNLOAD_MNE_DATA=TRUE
       addons: {apt: {packages: [libwebkitgtk-dev]}}
     - os: linux
-      python: 3.9
-      sudo: false
-      env: CONDA_OS="Linux"
+      name: "Linux Python 3.9"
+      env: CONDA_PYTHON="3.9" CONDA_OS="Linux"
       addons: {apt: {packages: [libwebkitgtk-dev]}}
 
 # Setup anaconda
-# https://gist.github.com/dan-blanchard/7045057
-# Without the defaults channel, the environment takes hours to solve; but with defaults, the mne interpolation test fails, suggesting problem in a library
+# https://docs.conda.io/projects/conda/en/latest/user-guide/tasks/use-conda-with-travis-ci.html
 before_install:
   - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
       /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset;
     fi;
   - wget -q http://repo.continuum.io/miniconda/Miniconda3-latest-$CONDA_OS-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b -p $HOME/miniconda
-  - export PATH=$HOME/miniconda/bin:$PATH
-  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
-      sed -e $'s/- conda-forge/- defaults\\\n- conda-forge/g' -i env-dev.yml;
-    else
-      sed -e $'s/- conda-forge/- defaults\\\n- conda-forge/g' -i .bkp env-dev.yml;
-    fi
-  - conda env create -n condaenv --file env-dev.yml
-  - . $HOME/miniconda/etc/profile.d/conda.sh
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+
+#  - chmod +x miniconda.sh
+#  - ./miniconda.sh -b -p $HOME/miniconda
+#  - export PATH=$HOME/miniconda/bin:$PATH
+#  - conda config --set always_yes yes --set changeps1 no
+  - conda create -n condaenv python=$CONDA_PYTHON
+  - conda env update -n condaenv --file env-dev.yml  --prune
+#  - . $HOME/miniconda/etc/profile.d/conda.sh
   - conda activate condaenv
-  - python -c "import mne; mne.datasets.testing.data_path()"
+  - if [ "${DOWNLOAD_MNE_DATA}" == "TRUE" ]; then
+      python -c "import mne; mne.datasets.testing.data_path()";
+    fi;
   - python --version
 
 install:
-  - python setup.py develop
+  - python -m pip install -e .
 
 script:
   - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then
