--- a/.travis.yml
+++ b/.travis.yml
@@ -26,21 +26,19 @@ before_install:
   - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
       /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset;
     fi;
-  - wget -q http://repo.continuum.io/miniconda/Miniconda3-latest-$CONDA_OS-x86_64.sh -O miniconda.sh
+  - wget -q https://github.com/conda-forge/miniforge/releases/latest/download/Mambaforge-$CONDA_OS-x86_64.sh -O miniconda.sh
   - bash miniconda.sh -b -p $HOME/miniconda
   - source "$HOME/miniconda/etc/profile.d/conda.sh"
   - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
   # Useful for debugging any issues with conda
-  - conda info -a
+  - mamba info -a
 
 #  - chmod +x miniconda.sh
 #  - ./miniconda.sh -b -p $HOME/miniconda
 #  - export PATH=$HOME/miniconda/bin:$PATH
 #  - conda config --set always_yes yes --set changeps1 no
-  - conda create -n condaenv python=$CONDA_PYTHON
-  - conda env update -n condaenv --file env-dev.yml  --prune
+  - mamba create -y -q -n condaenv python=$CONDA_PYTHON
+  - mamba env update -q -n condaenv --file env-dev.yml --prune
 #  - . $HOME/miniconda/etc/profile.d/conda.sh
   - conda activate condaenv
   - if [ "${DOWNLOAD_MNE_DATA}" == "TRUE" ]; then
