--- a/env-dev.yml
+++ b/env-dev.yml
@@ -47,6 +47,7 @@ dependencies:
 - pytest
 - pytest-cov
 - pytest-faulthandler
+- penguoin
 #- pytest-sugar  # errors on Linux
 # testing of R integration
 - rpy2
