--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ fresh-env  = 1
 all_files  = 1
 
 [upload_docs]
-upload-dir = doc/build/html
+upload_dir = doc/build/html
 
 [tool:pytest]
 filterwarnings =
