--- a/env-dev.yml
+++ b/env-dev.yml
@@ -7,11 +7,12 @@ channels:
 dependencies:
 - python >= 3.8
 - pip
+- packaging
 - twine
 - libblas=*=*mkl  # openblas produces incorrect results for ICA in iMac Pro
 - libcblas
 - libclang
-- numpy >= 1.20, <= 1.21  # Numba needs NumPy 1.21 or less
+- numpy >= 1.20, < 1.23  # Numba needs NumPy 1.22 or less
 - scipy >= 1.5
 - numba
 - matplotlib-base >= 3.4  # https://github.com/matplotlib/matplotlib/issues/15410
