DOC:  pin sphinx-autodoc-typehints

--- a/env-readthedocs.yml
+++ b/env-readthedocs.yml
@@ -20,7 +20,7 @@ dependencies:
 - pymatreader
 - sphinx_rtd_theme
 - sphinx >=3
-- sphinx-autodoc-typehints
+- sphinx-autodoc-typehints <1.21  # tested up to 1.23.4
 - sphinx-gallery
 - sphinxcontrib-bibtex
 - scipy >=0.17
