--- a/env-readthedocs.yml
+++ b/env-readthedocs.yml
@@ -9,7 +9,8 @@ dependencies:
 - docutils <0.17  # https://stackoverflow.com/a/68008428/166700
 - keyring >=5
 - matplotlib-base >=3.4
-- mne-base >=0.17
+- seaborn
+- mne-base >=1.0, <1.7
 - nibabel >2.3.0  # read_annot bug
 - nilearn
 - numpy >=1.11
