--- a/env-readthedocs.yml
+++ b/env-readthedocs.yml
@@ -12,7 +12,7 @@ dependencies:
 - seaborn
 - mne-base >=1.0
 - nibabel >2.3.0  # read_annot bug
-- nilearn
+- nilearn >=0.10.4
 - numpy >=1.11
 - numba
 - pillow
