--- a/env-dev.yml
+++ b/env-dev.yml
@@ -13,9 +13,8 @@ dependencies:
 # Scientific Python base
 - libcblas
 - libclang
-- numpy >= 1.20, < 1.24  # Numba needs NumPy ≤ 1.23
+- numpy >= 1.20
 - scipy >= 1.5
-- numba
 - matplotlib-base >= 3.6
 - seaborn
 - pymatreader
