--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -21,9 +21,17 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file env-dev.yml --name base
+        sudo apt-get update
+        sudo apt-get install -y xvfb
     - name: build Eelbrain
       run: |
         pip install -e .
+    - name: Start virtual display
+      run: |
+        Xvfb :99 -screen 0 1024x768x16 &
+        export DISPLAY=:99
     - name: Test with pytest
+      env:
+        DISPLAY: :99
       run: |
         pytest
