--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,4 +1,4 @@
-name: Python Package using Conda
+name: Tests
 
 on: [push]
 
@@ -34,4 +34,8 @@ jobs:
       env:
         DISPLAY: :99
       run: |
-        pytest
+        pytest --cov --cov-report=xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
