--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -1,9 +1,9 @@
-name: Tests
+name: Tests-Linux
 
 on: [push]
 
 jobs:
-  build-linux:
+  tests-linux:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
