--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -3,7 +3,7 @@ name: Tests-Windows
 on: [push]
 
 jobs:
-  build-linux:
+  tests-windows:
     runs-on: widows-latest
     strategy:
       max-parallel: 5
