--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   tests-windows:
-    runs-on: widows-latest
+    runs-on: windows-latest
     strategy:
       max-parallel: 5
 
