--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file env-dev.yml --name base
+        conda activate base
     - name: build Eelbrain
       run: |
         pip install -e .
